@@ -1,6 +1,14 @@
 Pending changes in the mainline
 ===============================
 
+REST API
+--------
+
+* Improved:
+  - "/instances/../modify": it is now possible to "Keep" the "SOPInstanceUID".  
+    Note that it was already possible to "Replace" it.
+
+
 
 Version 1.6.1 (2020-04-21)
 ==========================
